crates/math-core/tests/snapshots/error_test__space_prime.snap
---
source: crates/math-core/tests/error_test.rs
expression: "x' ^2"
---
Error: Duplicate subscript or superscript.
   ╭─[ <input>:1:4 ]
   │
 1 │ x' ^2
   │    ┬  
   │    ╰── duplicate
───╯
